--- a/app/src/main/res/layout/activity_news.xml
+++ b/app/src/main/res/layout/activity_news.xml
@@ -20,6 +20,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
+        android:gravity="center"
+        android:textColor="@color/colorAccent"
         android:textAppearance="?android:textAppearanceMedium"/>
 
     <!-- Loading indicator is only shown before the first load -->
