--- a/app/src/main/res/layout/news_list_items.xml
+++ b/app/src/main/res/layout/news_list_items.xml
@@ -24,4 +24,11 @@
         android:layout_height="wrap_content"
         android:textColor="@color/colorPrimary"
         android:textSize="15sp" />
+
+    <TextView
+        android:id="@+id/author"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="@color/colorAccent"
+        android:textSize="15sp" />
 </LinearLayout>
