--- a/app/src/main/res/layout/news_list_items.xml
+++ b/app/src/main/res/layout/news_list_items.xml
@@ -8,7 +8,7 @@
         android:id="@+id/title_text_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@android:color/holo_purple"
+        android:textColor="@android:color/holo_red_dark"
         android:textSize="20sp" />
 
     <TextView
@@ -19,16 +19,16 @@
         android:textSize="15sp" />
 
     <TextView
+        android:id="@+id/authorName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="@android:color/holo_blue_dark"
+        android:textSize="15sp" />
+
+    <TextView
         android:id="@+id/date"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="@color/colorPrimary"
-        android:textSize="15sp" />
-
-    <TextView
-        android:id="@+id/author"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="@color/colorAccent"
         android:textSize="15sp" />
 </LinearLayout>
